--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +16,7 @@
 
 <p>Examples of my skill.</p>
 
-<img src="lesson%20images/baloon.jpg" alt="A man in front of a big baloon">
+<img src="lesson%20images/apple.png" alt="Its an apple obviously">
 
 <h3>Sample Web Pages</h3>
 <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
