Fix wrong css links

--- a/exercises/hero-image.html
+++ b/exercises/hero-image.html
@@ -9,7 +9,7 @@
 
     <link rel="preload" href="assets/img/business.jpg">
     
-    <link rel="stylesheet" href="assets/css/hero-image.css">
+    <link rel="stylesheet" href="../assets/css/hero-image.css">
 
 </head>
 
