--- a/exercises/hero-text.html
+++ b/exercises/hero-text.html
@@ -7,7 +7,7 @@
     <title>Hero Block with Text</title>
     <meta name="description" content="An above-the-fold hero block with animated text and various background colours.">
 
-    <link rel="stylesheet" href="assets/css/hero-text.css">
+    <link rel="stylesheet" href="../assets/css/hero-text.css">
 
 </head>
 
