--- a/exercises/page-9.html
+++ b/exercises/page-9.html
@@ -7,7 +7,7 @@
     <title>The HTML box model with div elements</title>
     <meta name="description" content="A web page for exploring the HTML box model and in particular the properties of the div tag that can sub-divide elements into rectangular boxes.">
 
-    <link rel="stylesheet" href="assets/css/style-9.css">
+    <link rel="stylesheet" href="../assets/css/style-9.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
