--- a/exercises/hero-video.html
+++ b/exercises/hero-video.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A hero block with a background video that plays in a continuous loop and includes a tinted overlay.">
 
     <link rel="preload" href="assets/videos/hero-still.jpg" as="image">
-    
+
     <link rel="stylesheet" href="assets/css/hero-video.css">
 
 </head>
@@ -16,27 +16,27 @@
 
 <body>
 
-    <!-- hero block -->
-    <header class="hero-block text-center">
+<!-- hero block -->
+<header class="hero-block text-center">
 
-        <div class="hero-text-container">
-            <h1 class="slide-in-top">Education for Life</h1>
-            <h2 class="slide-in-left">A brighter career and future</h2>
-        </div>
+    <div class="hero-text-container">
+        <h1 class="slide-in-top">Education for Life</h1>
+        <h2 class="slide-in-left">A brighter career and future</h2>
+    </div>
 
-        <div class="hero-bg-media">
-            <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video" disablepictureinpicture preload="auto"> 
+    <div class="hero-bg-media">
+        <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video" disablepictureinpicture preload="auto">
 
-            <source src="assets/videos/hero-video.mp4" type="video/mp4">
-            </video>
-        </div>
+            <source src="../assets/videos/hero-video.mp4" type="video/mp4">
+        </video>
+    </div>
 
-        <div class="bg-overlay"></div>
+    <div class="bg-overlay"></div>
 
-    </header>
-    <!-- /hero block -->
+</header>
+<!-- /hero block -->
 
- 
+
 
 </body>
 </html>
