--- a/exercises/page-10.html
+++ b/exercises/page-10.html
@@ -10,7 +10,7 @@
 
   <meta name="description" content="A sample web page of text in highighted divs with various background colour and border styles.">
 
-  <link href="assets/css/style-10.css" rel="stylesheet">
+  <link href="../assets/css/style-10.css" rel="stylesheet">
   
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">  
