--- a/exercises/page-11.html
+++ b/exercises/page-11.html
@@ -30,7 +30,7 @@
 
     <header class="header-narrow text-center bg-header">
         <h1>About Us</h1>
-        <img src="assets/img/three-staff.png" alt="staff members">
+        <img src="../assets/img/three-staff.png" alt="staff members">
         <h2>We are an award-winning web, mobile and digital design agency. We can bring your ideas to life online, and transform visionary products and services into successful ones.</h2>
     </header>
     
