--- a/exercises/page-13.html
+++ b/exercises/page-13.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Using HTML5 section tags to create a web page with alternating light and dark coloured backgrounds.">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style-13.css">
+    <link rel="stylesheet" href="../assets/css/style-13.css">
     
    <!-- Google Fonts -->
    <link rel="preconnect" href="https://fonts.gstatic.com">
