--- a/exercises/page-5.html
+++ b/exercises/page-5.html
@@ -7,7 +7,7 @@
     <title>Vincent van Gogh</title>
     <meta name="description" content="The Dutch post-impressionist whose works are characterised by bold colours and dramatic, impulsive and expressive brushwork.">
 
-    <link rel="stylesheet" href="assets/css/style-5.css">
+    <link rel="stylesheet" href="../assets/css/style-5.css">
 
     <!-- Google Fonts stylesheet -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
