--- a/exercises/page-6.html
+++ b/exercises/page-6.html
@@ -8,7 +8,7 @@
     <title>Ireland's Top Five Visitor Attractions</title>
     <meta name="description" content="The country's most popular atractions for visitors, according to the Irish Tourist Board.">
     
-    <link rel="stylesheet" href="assets/css/style-6.css">
+    <link rel="stylesheet" href="../assets/css/style-6.css">
 
     <!-- Google Fonts stylesheet -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
