--- a/exercises/hero-video.html
+++ b/exercises/hero-video.html
@@ -7,9 +7,9 @@
     <title>Hero Block with Video</title>
     <meta name="description" content="A hero block with a background video that plays in a continuous loop and includes a tinted overlay.">
 
-    <link rel="preload" href="assets/videos/hero-still.jpg" as="image">
+    <link rel="preload" href="../assets/videos/hero-still.jpg" as="image">
 
-    <link rel="stylesheet" href="assets/css/hero-video.css">
+    <link rel="stylesheet" href="../assets/css/hero-video.css">
 
 </head>
 
@@ -25,7 +25,7 @@
     </div>
 
     <div class="hero-bg-media">
-        <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video" disablepictureinpicture preload="auto">
+        <video loop playsinline muted autoplay poster="../assets/videos/hero-still.jpg" class="background-video" disablepictureinpicture preload="auto">
 
             <source src="../assets/videos/hero-video.mp4" type="video/mp4">
         </video>
