--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timothé Noël | Creative Digital Designer</title>
+    <title>TimothÃ© NoÃ«l | Creative Digital Designer</title>
     <meta name="description" content="Hi I'm Tim, a UI & UX designer based in Dublin. Mobile and Responsive Web Design, eCommerce Websites, Branding and Logo Design.">
     <link rel="stylesheet" href="assets/css/global.css">
 </head>
 
 <body>
 
-<h1>Hi, I'm Timothé Noël</h1>
+<h1>Hi, I'm Timothï¿½ Noï¿½l</h1>
 
 <h2>Web / UI Designer</h2>
 
@@ -27,5 +27,49 @@ DOCTYPE html>
 <p><a href="exercises/page-6.html">Irish Tourism</a></p>
 <p><a href="exercises/page-7.html">Smoothies</a></p>
 <p><a href="exercises/page-8.html">Software Analytics</a></p>
+<p><a href="exercises/page-9.html">The Box Model</a></p>
+<p><a href="exercises/page-10.html">Web Page With Panels</a></p>
+<p><a href="exercises/page-11.html">Web Page with Pastel Sections</a></p>
+<p><a href="exercises/page-12.html">Web Page with Dark Sections</a></p>
+<p><a href="exercises/page-13.html">Web Page with Alternating Sections</a></p>
+<p><a href="exercises/page-14.html">Responsive grid of rows and columns</a></p>
+<p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
+<p><a href="exercises/hero-image.html">Hero block with background image</a></p>
+<p><a href="exercises/hero-video.html">Hero block with background video</a></p>
+<p><a href="exercises/buttons-icons.html">Buttons and Icons</a></p>
+<p><a href="exercises/forms.html">Email Sign-up Form</a></p>
+<p><a href="exercises/js/1/exercise-1-1.html">Writing Your First Scripts - 1</a></p>
+<p><a href="exercises/js/1/exercise-1-2.html">Writing Your First Scripts - 2</a></p>
+<p><a href="exercises/js/1/exercise-1-3.html">Writing Your First Scripts - 3</a></p>
+<p><a href="exercises/js/1/exercise-1-4.html">Writing Your First Scripts - 4</a></p>
+<p><a href="exercises/js/1/exercise-1-5.html">Writing Your First Scripts - 5</a></p>
+<p><a href="exercises/js/1/exercise-1-6.html">Writing Your First Scripts - 6</a></p>
+<p><a href="exercises/js/2/exercise-2-1.html">Objects and Properties - 1</a></p>
+<p><a href="exercises/js/3/exercise-3-1.html">Variables and Operators - 1</a></p>
+<p><a href="exercises/js/3/exercise-3-2.html">Variables and Operators - 2</a></p>
+<p><a href="exercises/js/3/exercise-3-3.html">Variables and Operators - 3</a></p>
+<p><a href="exercises/js/3/exercise-3-4.html">Variables and Operators - 4</a></p>
+<p><a href="exercises/js/4/exercise-4-1.html">Introduction to Functions - 1</a></p>
+<p><a href="exercises/js/4/exercise-4-2.html">Introduction to Functions - 2</a></p>
+<p><a href="exercises/js/5/exercise-5-1.html">User Input - 1</a></p>
+<p><a href="exercises/js/5/exercise-5-2.html">User Input - 2</a></p>
+<p><a href="exercises/js/5/exercise-5-3.html">User Input - 3</a></p>
+<p><a href="exercises/js/6/exercise-6-1.html">Functions with Parameters - 1</a></p>
+<p><a href="exercises/js/6/exercise-6-2.html">Functions with Parameters - 2</a></p>
+<p><a href="exercises/js/7/exercise-7-1.html">Making Decisions in JavaScript - 1</a></p>
+<p><a href="exercises/js/7/exercise-7-2.html">Making Decisions in JavaScript - 2</a></p>
+<p><a href="exercises/js/7/exercise-7-3.html">Making Decisions in JavaScript - 3</a></p>
+<p><a href="exercises/js/7/exercise-7-4.html">Making Decisions in JavaScript - 4</a></p>
+<p><a href="exercises/js/7/exercise-7-5.html">Making Decisions in JavaScript - 5</a></p>
+<p><a href="exercises/js/8/exercise-8-1.html">Loops in JavaScript - 1</a></p>
+<p><a href="exercises/js/8/exercise-8-2.html">Loops in JavaScript - 2</a></p>
+<p><a href="exercises/js/8/exercise-8-3.html">Loops in JavaScript - 3</a></p>
+<p><a href="exercises/js/8/exercise-8-4.html">Loops in JavaScript - 4</a></p>
+<p><a href="exercises/js/8/exercise-8-5.html">Loops in JavaScript - 5</a></p>
+<p><a href="exercises/js/9/exercise-9-1.html">Working with Arrays - 1</a></p>
+<p><a href="exercises/js/9/exercise-9-2.html">Working with Arrays - 2</a></p>
+<p><a href="exercises/js/9/exercise-9-3.html">Working with Arrays - 3</a></p>
+<p><a href="exercises/js/11/exercise-11-1.html">Working with the DOM</a></p>
+
 </body>
 </html>
