--- a/personal/personal-2/portfolio/index.html
+++ b/personal/personal-2/portfolio/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
-	<title>Portfolio | Mary Smith Web Designer</title>
+	<title>Portfolio | Timothé Noël Web Designer</title>
 	<meta name="description" content="I use HTML and CSS with graphic design and animation to bring your ideas to life.">
 	
     <link href="../assets/css/resets.css" rel="stylesheet">
@@ -64,22 +64,18 @@
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-            <img src="../assets/img/profile-pic.jpg" alt="Mary Smith, web designer, Dublin">
-            <p>Hi, I'm <b>Mary Smith</b>, a web and digital designer based in Dublin, Ireland.</p>
+            <img src="../assets/img/profile-pic.png" alt="Timothé Noël, web designer, Dublin">
+            <p>Hi, I'm <b>Timothé Noël</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
         <h4>Contact</h4>
         <p>Have a project you'd like to discuss? Let's make something great together!</p>
 
-        <h5><a href="mailto:marysmith@myemail.com" target="_blank">marysmith@myemail.com</a></h5>
+        <h5><a href="mailto:timothe.noel@gmail.com" target="_blank">timothe.noel@gmail.com</a></h5>
 
         <h4>Social Links</h4>
         <div class="fly-out-social-icons">
-            <a href="#" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-linkedin fa-fw"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://github.com/timalts" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
         </div>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
@@ -136,8 +132,8 @@
    
 	<footer>
 
-        <h4>Mary Smith, web designer</h4>
-        <h5>Excellence in digital creation</h5>
+        <h4>Timothé Noël, web designer</h4>
+        <h5>Excellence in front-end developpement</h5>
 
         <ul class="footer-links">
             <li><a href="../index.html">Home</a></li>
@@ -147,35 +143,10 @@
         
         <ul class="footer-icons">
             <li>
-                <a href="#" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </li>
-
-            <li>
-                <a href="#" target="_blank">
-                    <i class="fab fa-facebook"></i>
-                </a>
-            </li>
-
-            <li>
-                <a href="#" target="_blank">
+                <a href="https://github.com/timalts" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-            </li>
-
-            <li>
-                <a href="#" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-
-            <li>
-                <a href="#" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </li>
-            
+            </li>            
          </ul>                
 
     </footer>
