--- a/personal/personal-4/portfolio/index.html
+++ b/personal/personal-4/portfolio/index.html
@@ -72,7 +72,7 @@
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
             <img src="../assets/img/profile-pic.png" alt="Timothé Noël, web designer, Dublin">
-            <p>Hi, I'm <b>Timothé Noël</b>, a web and digital designer based in Dublin, Ireland.</p>
+            <p>Hi, I'm <b>Timothé Noël</b>, a web and digital designer based in Strasbourg, France.</p>
         </div>
    
         <h4>Contact</h4>
