Edit portfolio and finish javascript

--- a/personal/personal-1/contact/index.html
+++ b/personal/personal-1/contact/index.html
@@ -29,10 +29,10 @@
      <!-- Begin desktop menu -->
     <div class="container-menu-desktop menu-light menu-sticky">
         <!-- first child item -->
-        <a href="../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
+        <a href="../../../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
         <!-- second child item -->
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../../index.html">Home</a></li>
             <li><a href="../portfolio/index.html">Portfolio</a></li>
             <li><a href="../contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
@@ -43,7 +43,7 @@
     <!-- Begin mobile menu bar -->
     <div class="container-menu-bar-mobile menu-light menu-sticky">
             <!-- first child -->
-            <a href="../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
+            <a href="../../../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
             <!-- second child -->
             <div class="item-icon">
                 <div class="bar1"></div>
@@ -56,7 +56,7 @@
     <!-- Begin mobile menu slide-out options -->
     <div class="flyout-menu flyout-menu-is-closed menu-light">
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../../index.html">Home</a></li>
             <li><a href="../portfolio/index.html">Portfolio</a></li>
             <li><a href="../contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
@@ -146,7 +146,7 @@
         <h5>Excellence in front-end developpement</h5>
 
         <ul class="footer-links">
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../../index.html">Home</a></li>
             <li><a href="../portfolio/index.html">Portfolio</a></li>
             <li><a href="index.html">Contact</a></li>
         </ul>
