--- a/personal/personal-1/portfolio/index.html
+++ b/personal/personal-1/portfolio/index.html
@@ -29,10 +29,10 @@
     <!-- Begin desktop menu -->
     <div class="container-menu-desktop menu-light menu-sticky">
         <!-- first child item -->
-        <a href="../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
+        <a href="../../../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
         <!-- second child item -->
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../../index.html">Home</a></li>
             <li><a href="../portfolio/index.html">Portfolio</a></li>
             <li><a href="../contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
@@ -56,7 +56,7 @@
     <!-- Begin mobile menu slide-out options -->
     <div class="flyout-menu flyout-menu-is-closed menu-light">
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../../index.html">Home</a></li>
             <li><a href="../portfolio/index.html">Portfolio</a></li>
             <li><a href="../contact/index.html" class="btn-cta"><i class="fas fa-shopping-cart"></i> Contact</a></li>
         </ul>
@@ -108,24 +108,24 @@
         </div><!-- End parent flexbox container -->
 
 		<div class="item-3">
-			<a href="van-gogh/index.html"><img src="../assets/img/project-van-gogh.png" class="image-shadow" alt="Project: Smooth Smoothies"></a>
-			<h3><a href=van-gogh/index.html" class="fancy-link">Vincent Van Gogh</a></h3>
+			<a href="../../../portfolio/van-gogh/index.html"><img src="../assets/img/project-van-gogh.png" class="image-shadow" alt="Project: Smooth Smoothies"></a>
+			<h3><a href=../../../portfolio/van-gogh/index.html" class="fancy-link">Vincent Van Gogh</a></h3>
             <p>Responsive page layout with fluid typography, Google Fonts, and embedded YouTube video.</p>
-            <a href="van-gogh/index.html" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>             
+            <a href="../../../portfolio/van-gogh/index.html" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>             
 		</div>
 
         <div class="item-3">
-			<a href=smoothies/index.html"><img src="../assets/img/project-smoothie.jpg" class="image-shadow" alt="Project: Smooth Smoothies"></a>
-			<h3><a href="smoothies/index.html" class="fancy-link">Smooth Smoothies</a></h3>
+			<a href=../../../portfolio/smoothies/index.html"><img src="../assets/img/project-smoothie.jpg" class="image-shadow" alt="Project: Smooth Smoothies"></a>
+			<h3><a href="../../../portfolio/smoothies/index.html" class="fancy-link">Smooth Smoothies</a></h3>
             <p>Transparent images, serverless email sign-up form and JavaScript on-scroll menu effects.</p>
-            <a href="smoothies/index.html" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>           
+            <a href="../../../portfolio/smoothies/index.html" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>           
         </div>
         
 		<div class="item-3">
-			<a href="ireland/index.html"><img src="../assets/img/project-ireland.jpg" class="image-shadow" alt="Project: Travel Agency"></a>
-			<h3><a href="ireland/index.html" class="fancy-link">Ireland's Attractions</a></h3>
+			<a href="../../../portfolio/ireland/index.html"><img src="../assets/img/project-ireland.jpg" class="image-shadow" alt="Project: Travel Agency"></a>
+			<h3><a href="../../../portfolio/ireland/index.html" class="fancy-link">Ireland's Attractions</a></h3>
             <p>On-page navigation with a looped background video that includes a tinted overlay.</p>
-            <a href="ireland/index.html" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>               
+            <a href="../../../portfolio/ireland/index.html" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>               
 		</div>
 
 	</div><!-- End parent flexbox container -->
@@ -137,7 +137,7 @@
         <h5>Excellence in front-end developpement</h5>
 
         <ul class="footer-links">
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../../index.html">Home</a></li>
             <li><a href="index.html">Portfolio</a></li>
             <li><a href="../contact/index.html">Contact</a></li>
         </ul>
