--- a/portfolio/ireland/index.html
+++ b/portfolio/ireland/index.html
@@ -40,7 +40,7 @@
     <a href="../../index.html"><img src="../../assets/img/website-logo.png" alt="website logo"></a>  
     <!-- second child item -->
     <ul>
-        <li><a href="../../portfolio/index.html">Portfolio</a></li>
+        <li><a href="../../personal/personal-1/portfolio/index.html">Portfolio</a></li>
         <li><a href="../../about-me.html">About Me</a></li>
         <li><a href="../../contact/index.html" class="btn-cta">Contact</a></li>  
       </ul>
@@ -64,7 +64,7 @@
     <!-- Begin mobile menu slide-out options -->
     <nav class="flyout-menu flyout-menu-is-closed menu-dark">
         <ul>
-            <li><a href="../../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../../personal/personal-1/portfolio/index.html">Portfolio</a></li>
             <li><a href="../../about-me.html">About Me</a></li>
             <li><a href="../../contact/index.html" class="btn-cta">Contact</a></li> 
         </ul>
@@ -184,7 +184,7 @@
 
     <ul class="footer-links">
         <li><a href="../../index.html">Home</a></li>
-        <li><a href="../../portfolio/index.html">Portfolio</a></li>
+        <li><a href="../../personal/personal-1/portfolio/index.html">Portfolio</a></li>
         <li><a href="../../contact/index.html">Contact</a></li>
     </ul>
     
