--- a/portfolio/smoothies/index.html
+++ b/portfolio/smoothies/index.html
@@ -38,9 +38,9 @@
         <a href="../../index.html"><img src="../../assets/img/website-logo.png" alt="website logo"></a>  
         <!-- second child item -->
         <ul>
-            <li><a href="../../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../../personal/personal-1/portfolio/index.html">Portfolio</a></li>
             <li><a href="../../about-me.html">About Me</a></li>
-            <li><a href="../../contact/index.html" class="btn-cta">Contact</a></li>  
+            <li><a href="../../personal/personal-1/contact/index.html" class="btn-cta">Contact</a></li>  
           </ul>
     </nav>
     <!-- End desktop menu -->
@@ -62,9 +62,9 @@
         <!-- Begin mobile menu slide-out options -->
         <nav class="flyout-menu flyout-menu-is-closed menu-dark">
             <ul>
-                <li><a href="../../portfolio/index.html">Portfolio</a></li>
+                <li><a href="../../personal/personal-1/portfolio/index.html">Portfolio</a></li>
                 <li><a href="../../about-me.html">About Me</a></li>
-                <li><a href="../../contact/index.html" class="btn-cta">Contact</a></li> 
+                <li><a href="../../personal/personal-1/contact/index.html" class="btn-cta">Contact</a></li> 
             </ul>
     
             <hr>
@@ -204,8 +204,8 @@
 
     <ul class="footer-links">
         <li><a href="../../index.html">Home</a></li>
-        <li><a href="../../portfolio/index.html">Portfolio</a></li>
-        <li><a href="../../contact/index.html">Contact</a></li>
+        <li><a href="../../personal/personal-1/portfolio/index.html">Portfolio</a></li>
+        <li><a href="../../personal/personal-1/contact/index.html">Contact</a></li>
     </ul>
     
     <ul class="footer-icons">
